# fizika

./: .gitignore  CMakeLists.txt  Pozitiv_T.cpp  README.md  adatok.txt  main.cpp  tavolsag.h  toltesek.cpp  toltesek.h
ezt a 2 átt kell tenni/: adatok.txt
